# Ferrous-DNS

./: .gitignore  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE-README.md  README.md  ROADMAP.md  benchmark-results.md  cliff.toml  docker-compose.yml  ferrous-dns.toml  mkdocs.yml  requirements.txt
crates/api/: Cargo.toml
crates/api-pihole/: Cargo.toml
crates/api-pihole/src/: errors.rs  lib.rs  routes.rs  state.rs  timestamp.rs
crates/api-pihole/src/dto/: action.rs  auth.rs  clients.rs  dns.rs  domains.rs  groups.rs  history.rs  info.rs  lists.rs  mod.rs  queries.rs  search.rs  stats.rs  upstreams.rs
crates/api-pihole/src/handlers/: action.rs  auth.rs  clients.rs  dns.rs  domains.rs  groups.rs  history.rs  info.rs  lists.rs  mod.rs  queries.rs  search.rs  stats.rs
crates/api-pihole/tests/: action_tests.rs  auth_tests.rs  clients_tests.rs  dns_tests.rs  domains_tests.rs  groups_tests.rs  history_tests.rs  info_tests.rs  lists_tests.rs  queries_tests.rs  search_tests.rs  stats_tests.rs
crates/api-pihole/tests/helpers/: mod.rs
crates/api/src/: errors.rs  handlers.rs  lib.rs  routes.rs  state.rs
crates/api/src/dto/: api_token.rs  auth.rs  backup.rs  blocked_service.rs  blocklist.rs  blocklist_source.rs  cache.rs  client.rs  client_subnet.rs  config.rs  custom_service.rs  dashboard.rs  group.rs  local_record.rs  managed_domain.rs  mod.rs  query.rs  rate.rs  regex_filter.rs  safe_search.rs  schedule.rs  stats.rs  system_info.rs  timeline.rs  tls.rs  user.rs  whitelist.rs  whitelist_source.rs
crates/api/src/handlers/: api_key.rs  api_tokens.rs  auth.rs  backup.rs  block_filter.rs  blocked_services.rs  blocklist.rs  blocklist_sources.rs  cache.rs  client_groups.rs  client_subnets.rs  clients.rs  config.rs  custom_services.rs  dashboard.rs  groups.rs  local_records.rs  managed_domains.rs  manual_clients.rs  mod.rs  queries.rs  rate.rs  regex_filters.rs  safe_search.rs  schedule_profiles.rs  stats.rs  system_info.rs  timeline.rs  tls.rs  upstream.rs  users.rs  whitelist.rs  whitelist_sources.rs
crates/api/src/middleware/: api_key.rs  mod.rs  require_auth.rs
crates/api/src/utils/: mod.rs  period.rs
crates/api/tests/: api_key_middleware_test.rs  auth_api_tests.rs  backup_api_tests.rs  blocklist_sources_api_tests.rs  blocklist_test.rs  cache_test.rs  client_subnets_api_tests.rs  clients_api_tests.rs  config_test.rs  local_records_api_tests.rs  managed_domains_api_tests.rs  period_filtering_tests.rs  regex_filters_api_tests.rs  safe_search_api_tests.rs  stats_api_tests.rs  timeline_granularity_test.rs  whitelist_sources_api_tests.rs
crates/api/tests/helpers/: mock_auth.rs  mock_backup.rs  mock_tls.rs  mod.rs  test_app.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/ports/: api_token_repository.rs  arp_reader.rs  backup_ports.rs  block_filter_engine.rs  blocked_service_repository.rs  blocklist_repository.rs  blocklist_source_repository.rs  cache_maintenance_port.rs  client_repository.rs  client_subnet_repository.rs  config_file_port.rs  config_repository.rs  custom_service_repository.rs  dns_cache_port.rs  dns_handler.rs  dns_resolver.rs  group_repository.rs  hostname_resolver.rs  managed_domain_repository.rs  mod.rs  nxdomain_hijack_store.rs  ptr_record_registry.rs  query_log_repository.rs  regex_filter_repository.rs  response_ip_filter_store.rs  safe_search_config_repository.rs  safe_search_engine_port.rs  schedule_profile_repository.rs  schedule_state_port.rs  service_catalog_port.rs  session_repository.rs  tls_certificate_port.rs  (+5 more)
crates/application/tests/: api_tokens_test.rs  blocklist_sources_test.rs  blocklist_test.rs  delete_client_test.rs  dns_cookies_test.rs  dns_rebinding_test.rs  get_recent_limit_test.rs  handle_dns_query_test.rs  local_records_ptr_test.rs  managed_domains_test.rs  nxdomain_hijack_test.rs  query_rate_test.rs  query_stats_test.rs  response_ip_filter_test.rs  subnet_matcher_tests.rs  tunneling_test.rs  whitelist_sources_test.rs  whitelist_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/tests/: api_token_repository_tests.rs  arp_reader_tests.rs  blocklist_source_repository_tests.rs  cache_case_insensitivity_test.rs  cache_cname_target_test.rs  cache_coalescing_test.rs  cache_layer_inflight_test.rs  cache_layer_inflight_toctou_test.rs  cache_transient_error_test.rs  cache_ttl_bounds_test.rs  client_repository_tests.rs  client_subnet_repository_tests.rs  config_persistence_tests.rs  config_repository_tests.rs  dns_cache_test.rs  dns_transport_test.rs  dnssec_chain_test.rs  dnssec_test.rs  dnssec_validator_test.rs  ede_mapping_test.rs  fast_path_edns_test.rs  fast_path_wire_test.rs  group_repository_tests.rs  hostname_resolver_test.rs  local_ptr_resolver_tests.rs  managed_domain_repository_tests.rs  message_builder_test.rs  negative_cache_capacity_test.rs  negative_ttl_floor_test.rs  negative_ttl_soa_test.rs  nxdomain_hijack_detector_test.rs  pool_expansion_test.rs  proxy_protocol_tests.rs  query_filters_ptr_tests.rs  query_log_repository_tests.rs  resolver_test.rs  response_ip_filter_detector_test.rs  schedule_profile_repository_tests.rs  stale_refresh_test.rs  tunneling_client_stats_test.rs  (+5 more)
crates/jobs/: Cargo.toml
crates/jobs/src/: blocklist_sync.rs  cache_maintenance.rs  client_sync.rs  lib.rs  nxdomain_hijack_eviction.rs  query_log_retention.rs  response_ip_filter_eviction.rs  retention.rs  runner.rs  schedule_evaluator.rs  session_cleanup.rs  tunneling_eviction.rs  wal_checkpoint.rs
crates/jobs/tests/: cache_maintenance_job_tests.rs  client_sync_job_tests.rs  job_runner_tests.rs  query_log_retention_tests.rs  retention_job_tests.rs
tests/: Cargo.toml
tests/common/: fixtures.rs  mod.rs  test_server.rs
tests/flows/: complete_resolution_flow.rs  failover_flow.rs
tests/performance/: benchmark_cache.rs  benchmark_latency.rs  benchmark_throughput.rs  competitor_comparison.rs  load_test.rs
(+552 files in other folders)
