[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
    "crates/cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anderson Viudes <anderson@ferrous-dns.dev>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ferrous-dns-domain = { path = "crates/domain" }
ferrous-dns-application = { path = "crates/application" }
ferrous-dns-infrastructure = { path = "crates/infrastructure" }
ferrous-dns-api = { path = "crates/api" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"], default-features = false }
hickory-resolver = "0.25"
hickory-server = "0.25"
hickory-proto = "0.25"
