[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/jobs",
    "crates/api",
    "crates/cli"
]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Anderson Viudes <anderson@ferrous-dns.dev>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ferrous-dns-domain = { path = "crates/domain" }
ferrous-dns-application = { path = "crates/application" }
ferrous-dns-infrastructure = { path = "crates/infrastructure" }
ferrous-dns-jobs = { path = "crates/jobs" }
ferrous-dns-api = { path = "crates/api" }

tokio = { version = "1", features = ["full"] }
fastrand = "2.0"
lru = "0.16.3"
ahash = "0.8"
bloomfilter = "3.0.1"
arc-swap = "1.7"
aho-corasick = "1.1"
fancy-regex = "0.17.0"
hostname = "0.4"
async-trait = "0.1"
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite","migrate"], default-features = false }
chrono = "0.4.43"
hickory-server = "0.26.0-alpha.1"
hickory-proto = { version = "0.26.0-alpha.1", features = ["dnssec-ring"] }
toml = "0.9.8"
toml_edit = "0.22"
dashmap = "6.1"
futures = "0.3"
rustc-hash = "2.1.0"
compact_str = "0.9.0"
smallvec = "1.15.1"
socket2 = "0.6.2"

# DNSSEC Crypto (FASE 2)
ring = "0.17"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22.1"

# Transport layer
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
bytes = "1"
mimalloc = { version = "0.1", default-features = false }
core_affinity = "0.8"
libc = "0.2"

# ============================================================================
# PERFORMANCE OPTIMIZATION PROFILES
# ============================================================================

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.bench]
inherits = "release"
debug = true
lto = "thin"

[profile.dev-opt]
inherits = "dev"
opt-level = 2
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.hickory-proto]
opt-level = 3

[profile.dev.package.hickory-server]
opt-level = 3

[profile.dev.package.dashmap]
opt-level = 3

[profile.dev.package.tokio]
opt-level = 3
