[package]
name = "ferrous-dns-api-pihole"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
hostname = "0.4"
libc = "0.2"

[dev-dependencies]
ferrous-dns-infrastructure.workspace = true
tokio.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json.workspace = true
