[package]
name = "ferrous-dns-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
ferrous-dns-infrastructure.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true
chrono = "0.4"
hostname = "0.4"
