[package]
name = "ferrous-dns-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = "0.4"
hostname = "0.4"

[dev-dependencies]
ferrous-dns-infrastructure.workspace = true
async-trait.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
