[package]
name = "ferrous-dns-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-domain.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
ipnetwork = "0.20"

[dev-dependencies]
chrono = "0.4"
