[package]
name = "ferrous-dns-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-domain.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ipnetwork = "0.20"
lru.workspace = true
libc.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
bytes.workspace = true
ring.workspace = true
sha2.workspace = true
chrono.workspace = true
subtle = "2"

[dev-dependencies]
chrono = "0.4"
