[package]
name = "ferrous-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrous-dns"
path = "src/main.rs"

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
ferrous-dns-infrastructure.workspace = true
ferrous-dns-jobs.workspace = true
ferrous-dns-api.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
sqlx.workspace = true
hickory-server.workspace = true
socket2.workspace = true
mimalloc.workspace = true
core_affinity.workspace = true
libc.workspace = true
