[package]
name = "ferrous-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrous-dns"
path = "src/main.rs"

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
ferrous-dns-infrastructure.workspace = true
ferrous-dns-jobs.workspace = true
ferrous-dns-api.workspace = true
ferrous-dns-api-pihole.workspace = true

tokio.workspace = true
futures.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
base64.workspace = true
fastrand.workspace = true
hickory-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
sqlx.workspace = true
hickory-server.workspace = true
socket2.workspace = true
mimalloc.workspace = true
core_affinity.workspace = true
libc.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
reqwest.workspace = true
ring.workspace = true
