[package]
name = "ferrous-dns-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dns-over-rustls", "dns-over-https"]
dns-over-rustls = []
dns-over-https = []

[dependencies]
ferrous-dns-domain.workspace = true
ferrous-dns-application.workspace = true
tokio.workspace = true
async-trait.workspace = true
sqlx.workspace = true
hickory-server.workspace = true
hickory-proto.workspace = true
tracing.workspace = true
fastrand.workspace = true
lru.workspace = true
hostname.workspace = true
dashmap.workspace = true
futures.workspace = true
rustc-hash.workspace = true
ahash.workspace = true
compact_str.workspace = true
smallvec.workspace = true

# FASE 2: UDP Socket Pool
socket2.workspace = true

# DNSSEC Crypto (FASE 2)
ring.workspace = true
sha2.workspace = true
base64.workspace = true

# Transport layer
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
reqwest.workspace = true
bytes.workspace = true
chrono = "0.4.43"
arc-swap.workspace = true
aho-corasick.workspace = true
fancy-regex.workspace = true

[dev-dependencies]
tempfile = "3.8"
time = "0.3"
