[package]
name = "ferrous-dns-jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrous-dns-application.workspace = true
ferrous-dns-domain.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz = "0.10"

[dev-dependencies]
async-trait.workspace = true
